--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    implementation 'com.karumi:dexter:6.2.1'
+    implementation 'com.github.prongbang:dexter-permissions-utility:1.1.0'
+
     implementation(project(":library"))
 
     testImplementation 'junit:junit:4.+'
